name:                odds
version:             0.1.0.0
synopsis:            A couple of probability monads
description:         Please see README.md
homepage:            https://github.com/oisdk/odds#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
copyright:           MIT
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Probability.OddsList
                     , Numeric.Probability.OddsTree
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite odds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , odds
                     , doctest >= 0.11
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/odds
